--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
     "prettier": "^2.7.1"
   }
 }
